ArtBabarykin/10.Kubernetes_application_deployment/jenkins.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: ci-cd2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
        - name: jenkins
          image: pluhin31/jenkins_ci
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          securityContext:
            runAsUser: 0
          resources:
            requests:
              cpu: 1000m
              memory: 2000Mi
            limits:
              cpu: 2000m
              memory: 4000Mi
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run
            - name: jenkins-auth-config
              mountPath: /var/jenkins_home/init.groovy.d/basic-security.groovy
              subPath: basic-security.groovy
            - name: jenkins-config-yaml
              mountPath: /var/jenkins_home/casc_configs/jenkins.yaml
              subPath: jenkins.yaml
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run
        - name: jenkins-auth-config
          configMap:
            name: basic-security
        - name: jenkins-config-yaml
          configMap:
            name: jenkins-config
        - name: jenkins-home
          nfs:
            server: 192.168.37.105
            path: /mnt/IT-Academy/nfs-data/sa2-14-20/ArtBabarykin/jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: ci-cd2
spec:
  type: NodePort
  ports:
    - name: master
      port: 8080
      targetPort: 8080
      nodePort: 31456
    - name: slave
      port: 50000
      targetPort: 50000
      nodePort: 31457
  selector:
    app: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ci-cd2
  name: ingress-jenkins
spec:
  rules:
  - host: jenkins.k8s-4.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
